Aplicación terminada parcialmente. Version para subir a heroku.

--- a/app_AutoRed_Rails-Angular/app/views/products/show.html.erb
+++ b/app_AutoRed_Rails-Angular/app/views/products/show.html.erb
@@ -32,17 +32,19 @@
 					-->
 
 	                <div id="contenedor_select_marca">
+
 	                   <!-- <label> -->
 	                    	<h6 class="etiqueta_filtro"> Código: </h6>
-	                    	<!--<button> Código </button>-->
 	                    <!-- </label> -->
 	                    <div>
 	                        <ul class="input-list style-1 clearfix">
+	                    	<button align="center" class="btn btn-info" id="searchbycode" ng-click="$scope.toggle_element('#searchbycodetxt',1000)" disabled> Buscar por Código </button>
 	                            <div>
-	                              <input type="text" placeholder="(opcional)" ng-model="filtro.cod_prod" uib-typeahead="product.cod_prod for product in products | filter:$viewValue | limitTo:5"></input>
+	                              <input class="form-control" id="searchbycodetxt" type="text" placeholder="(opcional)" ng-model="model_codigo" uib-typeahead="product.cod_prod for product in productos | filter:$viewValue | limitTo:5" disabled></input>
 	                            </div>                                      
 	                        </ul>
 	                    </div>
+	                    
 	                </div>
 
 	                <div id="contenedor_select_modelo">
@@ -50,7 +52,7 @@
 	                    <div>
 	                        <ul class="input-list style-1 clearfix">
 	                            <div>
-	                              <select class="soflow" id="marca_combo" ng-model="filtro.marca" ng-options="marca for marca in marcas" ng-change="combo_modelos(filtro.marca)">
+	                              <select class="soflow" id="marca_combo" ng-model="model_marca" ng-options="marca for marca in marcas" ng-change="getModels(model_marca)">
 	                              	<option value="">Escoge una..</option>
 	                              </select>
 	                            </div>
@@ -63,7 +65,7 @@
 	                    <div>
 	                        <ul class="input-list style-1 clearfix">
 	                            <div>
-	                              <select class="soflow" id="modelo_combo" ng-model="filtro.modelo" ng-options="modelo for modelo in modelos" ng-change="combo_anhios(filtro.modelo)">
+	                              <select class="soflow" id="modelo_combo" ng-model="model_modelo" ng-options="modelo for modelo in modelos" ng-change="getYears(model_modelo)">
 	                              	<option value="">Escoge uno..</option>
 	                              </select>
 	                            </div>
@@ -76,7 +78,7 @@
 	                    <div>
 	                        <ul class="input-list style-1 clearfix">
 	                            <div>
-	                              <select class="soflow" id="anhio_combo" ng-model="filtro.anhio" ng-options="anhio for anhio in anhios">
+	                              <select class="soflow" id="anhio_combo" ng-model="model_anhio" ng-options="anhio for anhio in anhios">
 	                              	<option value="">Escoge uno..</option>
 	                              </select>
 	                            </div>
@@ -97,7 +99,7 @@
 	              <div id="loading"></div>
 
 	              <div>
-	                  <div ng-repeat=" product in products | filter:filtro"  class="contenido">
+	                  <div ng-repeat=" product in productos | filter:filtro"  class="contenido">
 
 	                      <div id="contenido_imagen"></div>
 
@@ -105,7 +107,8 @@
 	                          <label class="texto">Código: </label> {{product.cod_prod}} <br>
 	                          <label class="texto">Línea: </label> {{product.linea}} <br>
 	                          <label class="texto">Sistema: </label> {{product.sistema}} <br>
-	                          <label class="texto">Descripción: </label> {{product.descripcion}} 
+	                          <label class="texto">Descripción: </label> {{product.descripcion}} <br>
+	                          <label class="texto">Año: </label> {{product.anhio}}																																																																											
 
 	                      </div>
 
@@ -113,20 +116,24 @@
 	                          <table>
 
 	                            <tr>
-	                              <td align="center"> <label class="texto">Disp. en ▼</label> </td>
 	                              <td align="center"> <label class="texto">Cant. ▼</label> </td>
+	                              <td align="center"> <label class="texto">Disp. en ▼</label> </td>
 	                            </tr>
 
 	                            <tr>
 	                                
-	                              <td ng-if= "x.location == 'Victoria'" align="center"> <a href="https://goo.gl/2UvGs6" target="_blank" class="link2maps" > {{x.location}} </a> </td>
-	                              <td ng-if= "x.location == 'Barrancos'" align="center"> <a href="https://goo.gl/ljp0NB" target="_blank" class="link2maps" > {{x.location}} </a> </td>
-	                              <td ng-if= "x.location == 'Sanalona'" align="center"> <a href="https://goo.gl/gzV3lM" target="_blank" class="link2maps" > {{x.location}} </a> </td>
-	                              <td ng-if= "x.location == 'Lombardo'" align="center"> <a href="https://goo.gl/zLRm4r" target="_blank" class="link2maps" > {{x.location}} </a> </td>
-	                              <td ng-if= "x.location == 'Calzada'" align="center"> <a href="https://goo.gl/wzzOej" target="_blank" class="link2maps" > {{x.location}} </a> </td>
-	                              <td ng-if= "x.location == 'Navolato'" align="center"> <a href="https://goo.gl/IWoj3j" target="_blank" class="link2maps" > {{x.location}} </a> </td>
+	                              <td align="center"> {{product.existencia}} </td> 
+	                              
+	                              <td ng-if= "checkstring(product.establecimiento) == 1" align="center"> <a href="https://goo.gl/2UvGs6" target="_blank" class="link2maps" > {{product.establecimiento}} </a> </td>
+	                              <td ng-if= "checkstring(product.establecimiento) == 2" align="center"> <a href="https://goo.gl/2UvGs6" target="_blank" class="link2maps" > {{product.establecimiento}} </a> </td>
+	                              <td ng-if= "checkstring(product.establecimiento) == 3" align="center"> <a href="https://goo.gl/ljp0NB" target="_blank" class="link2maps" > {{product.establecimiento}} </a> </td>
+	                              <td ng-if= "checkstring(product.establecimiento) == 4" align="center"> <a href="https://goo.gl/lWyWqu" target="_blank" class="link2maps" > {{product.establecimiento}} </a> </td>
+	                              <td ng-if= "checkstring(product.establecimiento) == 5" align="center"> <a href="https://goo.gl/zLRm4r" target="_blank" class="link2maps" > {{product.establecimiento}} </a> </td>
+	                              <td ng-if= "checkstring(product.establecimiento) == 6" align="center"> <a href="https://goo.gl/gzV3lM" target="_blank" class="link2maps" > {{product.establecimiento}} </a> </td>
+	                              <td ng-if= "checkstring(product.establecimiento) == 7" align="center"> <a href="https://goo.gl/wzzOej" target="_blank" class="link2maps" > {{product.establecimiento}} </a> </td>
+	                              <td ng-if= "checkstring(product.establecimiento) == 8" align="center"> <a href="https://goo.gl/IWoj3j" target="_blank" class="link2maps" > {{product.establecimiento}} </a> </td>
+	                              
 
-	                              <td align="center"> {{x.quantity}} </td>
 
 	                            </tr>
 
