--- a/app_AutoRed_Rails-Angular/app/assets/stylesheets/style.css
+++ b/app_AutoRed_Rails-Angular/app/assets/stylesheets/style.css
@@ -15,7 +15,7 @@ div#header {
 	padding: -2px;
 	position: fixed;
 	width: 100%;
-	height: 190px;
+	height: 130px;
 	background-color: white;
 
 	-webkit-box-shadow: 0px 13px 32px 8px rgba(255,255,255,1);
@@ -50,10 +50,11 @@ div#contenedor_logo{
 
 div#loading{
 	position: fixed;
+	margin-top: -70px;
 	margin-left: 30%;
-	#margin-top: 3.5px;
-	width: 650px;
-	height: 460px;
+	#margin-top: -3.5px;
+	width: 800px;
+	height: 600px;
 	background: url(loading.gif) no-repeat center white;
 	background-size: 10%;
 	opacity: 0.8;
@@ -218,13 +219,13 @@ div.contenido{
 	margin-bottom: 5px;
 	margin-left: 30%;
 	min-width: 413px;
-	width: 42%;
+	width: 45%;
 	height: 235px;
 	border: 2px solid;
 	border-color:  rgb(100,100,100);
 	border-radius: 10px;
     cursor: pointer;
-    display: none;
+    #display: none;
 }
 
 div.contenido:hover{
@@ -249,20 +250,22 @@ div#contenido_info{
 	margin-left: 40%;
 	margin-top: -175px;
 	#float: right;
-	width: 170px;
+	width: 35%;
+	min-width: 164px;
 	height: 90%;
 	#display: inline-block;
-	background-color: transparent;
+	word-wrap: break-word;
+	#background-color: greenyellow;
 }
 
 div#contenido_existencia_ubicacion{
 	padding-left: 10px;
-	margin-left: 70%;
-	margin-top: -197px;
+	margin-left: 75%;
+	margin-top: -207px;
 	#float: right;
-	width: 110px;
+	width: 22%;
 	height: 90%;
-	background-color: transparent;
+	#background-color: lightblue;
 }
 
 a.link2maps:link{
@@ -285,11 +288,11 @@ a.link2maps:visited{
 }
 
 .texto{
-	font-size: 1.05em;
+	font-size: 1.2em;
 	font-weight: bold;
 	line-height: .9em;
 	margin: .1em;
-	color: red;
+	color: rgb(255,48,0);
 	letter-spacing: 1px;
 	text-shadow:   
 	-1px -1px 0 #000,
@@ -299,7 +302,7 @@ a.link2maps:visited{
 }
 
 .texto_verde{
-	font-size: 1.5em;
+	font-size: 1.8em;
 	font-weight: bold;
 	line-height: .9em;
 	margin: .1em;
